--- a/styles/master.css
+++ b/styles/master.css
@@ -29,3 +29,57 @@ html {
     text-transform: uppercase;
     text-shadow: 0px !important;
 }
+
+#header-container {
+    border: 1px solid blue;
+    background-color: #fff;
+}
+
+.box-1{
+    border: 1px solid green;
+    display: inline-block;
+}
+
+.box-2 {
+    border: 1px solid red;
+    display: inline-block;
+}
+
+.box-3 {
+    border: 1px solid purple;
+    display: inline-block;
+}
+
+#banner-container {
+    background-color: #f4f4f4;
+    border: 1px solid blue;   
+}
+
+.ties {
+    border: 1px solid green;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.ties div {
+    display: flex;
+    border: 1px solid orange;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ties div img {
+    padding-bottom: 10px;
+}
+
+h1 {
+    text-align: center;
+    border: 1px solid green;
+}
+
+#product-container {
+    background-color: #fff;
+    border: 1px solid blue;   
+}
+
