--- a/styles/master.css
+++ b/styles/master.css
@@ -7,7 +7,7 @@ html {
     padding: 0 22%;
 }
 
-
+/*------------------Promotion Container START--------------------- */
 #promotion-container {
     background-color: #fa6938;
     display: flex;
@@ -22,33 +22,139 @@ html {
     text-shadow: 0.5px 0.5px gray;
 }
 
+#promotion-container li a {
+    color: #fff;
+    text-decoration:none;
+}
+
 .shipping {
     background-color: #c7532c;
     border-radius: 2px;
-    padding: 5px !important;
+    padding: 4px 8px !important;
     text-transform: uppercase;
     text-shadow: 0px !important;
 }
 
+/*------------------Promotion Container END--------------------- */
+
+/*------------------Header Container START--------------------- */
+
 #header-container {
-    border: 1px solid blue;
     background-color: #fff;
+    display: flex;
+    align-items: center;
 }
 
-.box-1{
-    border: 1px solid green;
+#logo {
+    display: inline-block;
+    width: 12%;
+}
+
+nav {
     display: inline-block;
 }
 
-.box-2 {
-    border: 1px solid red;
+nav ul {
     display: inline-block;
+    font-size: 1.5em;
 }
 
-.box-3 {
-    border: 1px solid purple;
+nav ul li {
+    list-style: none;
     display: inline-block;
+    padding: 13px;
 }
+
+nav ul li a {
+    color: #000;
+    text-decoration: none;
+}
+
+#header-right {
+    display: flex;
+    width: 39%;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-bottom: 23px;
+}
+
+#account {
+    position: relative;
+    bottom: 10px;  
+    text-transform: uppercase;
+}
+
+#account a {
+    padding-left: 5px;
+    font-size: 0.8em;
+    text-decoration: none;
+    color:#909090;
+}
+
+#account a:hover {
+    color: blue;
+}
+
+#cart-search-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#cart-search-container a {
+    color: #909090;
+    text-decoration: none;
+}
+#cart-box {
+    border: 1px solid #606060;
+    display: flex;
+    align-items: center;
+    border-radius: 3px;
+}
+
+#cart-box div {
+    padding: 4px;
+}
+
+#cart-sprite {
+    background: url('../assets/sprite.png') no-repeat -54px -28px;
+    width: 14px;
+	height: 12px;
+    /*display: inline-block;*/
+}
+
+#cart-square {
+    background-color: #c8c8c8;
+    width: 8px;
+    height: 8px;
+    border-radius: 3px;
+    margin: 2px;
+    margin-right: 6px;
+}
+
+#search-container {
+    border: 4px solid lightgrey;
+    margin-left: 15px;
+    border-radius: 5px;
+    width: 50%;
+}
+
+#search-sprite{
+    background: url('../assets/sprite.png') no-repeat -20px -30px;
+    width: 14px;
+	height: 14px;
+    position: relative;
+    left: 14px;
+    top: 3px;
+    display: inline-block
+}
+
+input {
+    width: 70%;
+    float: right;
+    border: none;
+}
+
+/*------------------Header Container END--------------------- */
 
 #banner-container {
     background-color: #f4f4f4;
@@ -77,6 +183,10 @@ h1 {
     text-align: center;
     border: 1px solid green;
 }
+
+/*------------------Header Container END--------------------- */
+
+/*------------------Content Container Container START--------------------- */
 
 #content-container {
     background-color: #fff;
