--- a/styles/master.css
+++ b/styles/master.css
@@ -182,29 +182,42 @@ h1 {
 
 #content-container {
     background-color: #fff;
-    border: 1px solid blue;
     text-align: center;
-}
-
-.product-container {
-    
-    border: 1px solid green;
-    display: flex;
-    justify-content: space-between;
+    padding-bottom: 90px;
 }
 
 .product-container div {
-    border: 1px solid red;
-    background-color: #f6f6f6;
+    display: inline-block;
+    width: 32.35%;
+    box-sizing: border-box;
+    margin: 58px 4px;
+}
+
+.product-container div img {
+    width: 100%;
+    border: 1px solid #c8c8c8;
 }
 
 h2 {
-    border: 1px solid pink;
+    font-style: italic;
+    font-size: 2.4em;
+    line-height: 1.4;
+    font-weight: 200;
 }
 
 #content-container a {
     text-transform: uppercase;
+    text-decoration: none;
+    color: #33a1ff;
+    letter-spacing: 2px;
 }
+
+#content-container a:hover {
+    color: #1782e0;
+}
+
+/*------------------Content Container END--------------------- */
+
 
 #sub-footer {
    background-color: #fff;
