--- a/styles/master.css
+++ b/styles/master.css
@@ -139,7 +139,7 @@ nav ul li a {
     display: inline-block
 }
 
-input {
+#search-container input {
     width: 70%;
     float: right;
     border: none;
@@ -178,7 +178,7 @@ h1 {
 
 /*------------------Header Container END--------------------- */
 
-/*------------------Content Container Container START--------------------- */
+/*------------------Content Container START--------------- */
 
 #content-container {
     background-color: #fff;
@@ -189,13 +189,23 @@ h1 {
 .product-container div {
     display: inline-block;
     width: 32.35%;
-    box-sizing: border-box;
     margin: 58px 4px;
+    position: relative;
 }
 
 .product-container div img {
     width: 100%;
     border: 1px solid #c8c8c8;
+    border-radius: 1px;
+}
+
+.product-container div h3 {
+    font-family: tahoma;
+    position: absolute;
+    text-align: right;
+    top: 0;
+    right: 16px;
+    font-size: 1.3em
 }
 
 h2 {
@@ -218,17 +228,106 @@ h2 {
 
 /*------------------Content Container END--------------------- */
 
+/*------------------Sub-footer START--------------- */
 
 #sub-footer {
    background-color: #fff;
-   border: 1px solid blue; 
    display: flex;
-   justify-content: space-between;
+   border: 1px solid grey;
 }
 
 .sub-footer-box-elements {
-    border: 1px solid purple;
+    flex: 1;
+    padding: 50px 30px 50px 0px;
 }
+
+.sub-footer-box-elements img {
+    width: 100%;
+    border: 1px solid #c8c8c8;
+    margin-bottom: 15px;
+    border-radius: 1px;
+}
+
+h4 {
+    font-size: 1.1em;
+    font-family: tahoma;
+    margin: 0 0 15px;
+}
+
+.sub-footer-box-elements p {
+    font-weight: bold;
+    font-size: 0.96em;
+}
+
+#weekly-pick p {
+    margin-top: 0px;
+}
+
+.sub-footer-box-elements a {
+    text-decoration: none;
+    color:#33a1ff;
+    font-size: 0.96em;
+}
+
+.sub-footer-box-elements a:hover {
+    color: #1782e0;
+}
+
+#social-media-container {
+    display: flex;
+    width: 47%;
+}
+
+#social-media-container div {
+    padding-right: 45px;
+}
+
+#facebook-sprite {
+    background: url('../assets/sprite.png') no-repeat -320px 0;
+}
+
+#pinterest-sprite {
+    background: url('../assets/sprite.png') no-repeat -320px -40px;
+}
+
+#twitter-sprite {
+    background: url('../assets/sprite.png') no-repeat -320px -80px;
+    width: 35px;
+	height: 35px;
+}
+
+
+#name-input {
+    width: 70%;
+    border: 4px solid lightgrey;
+    border-radius: 5px;
+    margin-bottom: 6px;
+}
+
+.subscribe-button {
+    background-color: #33a1ff;
+    color: #fff;
+    text-transform: uppercase;
+    margin-top: 10px;
+    border-radius: 4px;
+    font-size: 0.7em;
+    font-weight: 100;
+    border: 0px solid;
+    padding: 5px 8px;
+}
+
+#style-guide p {
+    margin-top: 0px;
+}
+
+#style-guide a:hover {
+    color: #1782e0;
+}
+
+
+/*------------------Sub-footer END--------------------- */
+
+/*------------------Footer START------------------------- */
 
 footer {
     background-color: #f4f4f4;
@@ -238,6 +337,7 @@ footer {
     border: 1px solid orange;
     display: flex;
     justify-content: space-between;
+    padding-top: 30px;
 }
 
 #nav-bottom {
@@ -245,11 +345,47 @@ footer {
     display: flex;
 }
 
-#nav-bottom ul li {
+#nav-bottom ul {
+    padding-left: 0px;
+    padding-right: 40px;
+    margin-top: 0px;
+}
+
+#nav-bottom ul li, #nav-bottom ul li a {
     list-style: none;
+    color: #909090;
+    text-decoration: none;
+    font-size: 0.95em;
+}
+
+#nav-bottom ul li a:hover {
+    color: #33a1ff
+}
+
+h5 {
+    font-family: tahoma;
+    margin: 5px 0px 10px;
 }
 
 
 #contact-us-container {
     border: 1px solid green;
+    background-color: #a2afc0;
+    padding: 10px;
+}
+
+#contact-us-container h3 {
+    color: #fff;
+}
+
+.contact-us-bottom {
+    border: 1px solid red;
+}
+
+.contact-us-left {
+    border: 1px solid green;
+}
+
+.contact-us-right {
+    border: 1px solid purple;
 }
