--- a/styles/master.css
+++ b/styles/master.css
@@ -1,10 +1,9 @@
 html {
-    background-color: lightblue;
     font-family: 'Catamaran', tahoma, sans-serif;
 }
 
-.gutters {
-    padding: 0 22%;
+.gutter {
+    padding: 0 8%;
 }
 
 /*------------------Promotion Container START--------------------- */
@@ -60,6 +59,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
+    color: #000;
 }
 
 #header-right {
@@ -170,11 +170,12 @@ nav ul li a {
     flex-direction: column;
     align-items: center;
     font-weight: bold;
+    width: 9%;
 }
 
 .ties div img {
     padding-bottom: 15px;
-    width: 65%;
+    width: 70%;
 }
 
 h1 {
@@ -455,6 +456,7 @@ h5 {
 .copyright a {
     text-decoration: none;
     border-bottom: 1px dotted #CCC;
+    color: #909090;
 }
 
 .copyright a:hover {
