--- a/styles/master.css
+++ b/styles/master.css
@@ -26,6 +26,14 @@ html {
     text-decoration: none;
 }
 
+.perforated-border {
+    border: 7px solid transparent;
+    border-image: url(../assets/perforated-bottom@2x.png) 0 0 30 0 repeat;
+    position: relative;
+    top: -8px;
+    width: 100%;
+}
+
 /*------------------Promotion Container START--------------------- */
 #promotion-container {
     background-color: #fa6938;
@@ -57,8 +65,12 @@ html {
     align-items: center;
 }
 
-#logo {
+#header-container a {
     width: 12%;
+}
+
+#logo {
+    width: 100%;
 }
 
 nav ul {
@@ -151,94 +163,6 @@ nav ul li a {
 }
 
 /*------------------Header Container END--------------------- */
-
-.perforated-border {
-    border: 7px solid transparent;
-    border-image: url(../assets/perforated-bottom@2x.png) 0 0 30 0 repeat;
-    position: relative;
-    top: -8px;
-    width: 100%;
-}
-
-#banner-container {
-    background-color: #f4f4f4;
-    margin: -13px;
-}
-
-.ties {
-    display: flex;
-    justify-content: center;
-}
-
-.ties div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-weight: bold;
-    width: 9%;
-}
-
-.ties div img {
-    padding-bottom: 15px;
-    width: 70%;
-}
-
-h1 {
-    text-align: center;
-    font-size: 3.5em;
-    letter-spacing: 1px;
-    padding: 1.5em;
-    margin: 0px;
-}
-
-/*------------------Header Container END--------------------- */
-
-/*------------------Content Container START--------------- */
-
-#content-container {
-    text-align: center;
-    padding-bottom: 90px;
-}
-
-#content-container a {
-    color: #33a1ff;
-    letter-spacing: 2px;
-}
-
-#content-container a:hover {
-    color: #1782e0;
-}
-
-#product-container div {
-    display: inline-block;
-    width: 32.35%;
-    margin: 58px 4px;
-    position: relative;
-}
-
-#product-container div img {
-    width: 100%;
-    border: 1px solid #c8c8c8;
-    border-radius: 1px;
-}
-
-#product-container div h3 {
-    font-family: tahoma;
-    position: absolute;
-    text-align: right;
-    top: 0;
-    right: 16px;
-    font-size: 1.3em
-}
-
-h2 {
-    font-style: italic;
-    font-size: 2.4em;
-    line-height: 1.4;
-    font-weight: 200;
-}
-
-/*------------------Content Container END--------------------- */
 
 /*------------------Sub-footer START--------------- */
 
