--- a/styles/master.css
+++ b/styles/master.css
@@ -34,6 +34,10 @@ html {
     width: 100%;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 /*------------------Promotion Container START--------------------- */
 #promotion-container {
     background-color: #fa6938;
@@ -63,6 +67,7 @@ html {
 #header-container {
     display: flex;
     align-items: center;
+    margin-top: -10px;
 }
 
 #header-container a {
@@ -114,7 +119,7 @@ nav ul li a {
 }
 
 .cart-box {
-    border: 1px solid #606060;
+    border: 1px solid #c8c8c8;
     display: flex;
     align-items: center;
     border-radius: 3px;
@@ -193,7 +198,6 @@ nav ul li a {
 
 .sub-footer-box-elements p {
     margin-top: 0px;
-    font-weight: bold;
     font-size: 0.96em;
 }
 
