--- a/styles/master.css
+++ b/styles/master.css
@@ -38,6 +38,13 @@ html {
     font-weight: bold;
 }
 
+.light-grey-border {
+    border: 1px solid #c8c8c8
+}
+
+input {
+    font-size: 0.75em;
+}
 /*------------------Promotion Container START--------------------- */
 #promotion-container {
     background-color: #fa6938;
@@ -119,7 +126,6 @@ nav ul li a {
 }
 
 .cart-box {
-    border: 1px solid #c8c8c8;
     display: flex;
     align-items: center;
     border-radius: 3px;
@@ -149,6 +155,7 @@ nav ul li a {
     margin-left: 15px;
     border-radius: 5px;
     width: 50%;
+    padding-top: 3px;
 }
 
 .search-sprite{
@@ -157,7 +164,6 @@ nav ul li a {
 	height: 14px;
     position: relative;
     left: 14px;
-    top: 3px;
     display: inline-block
 }
 
@@ -191,7 +197,6 @@ nav ul li a {
 
 .sub-footer-box-elements img {
     width: 100%;
-    border: 1px solid #c8c8c8;
     margin-bottom: 15px;
     border-radius: 1px;
 }
@@ -248,6 +253,8 @@ h4 {
     border: 4px solid lightgrey;
     border-radius: 5px;
     margin-bottom: 6px;
+    padding: 6px;
+    font-weight: 100;
 }
 
 .subscribe-button {
